--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
@@ -25,5 +25,9 @@
         <div id="caption"></div>
     </div>
 </div>
-<script type="text/javascript" src="{{ asset('bundles/core/js/modal.js') }}"></script>
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function (event) {
+        loadjsfile("{{ asset('bundles/core/js/modal.js') }}", true);
+    });
+</script>
 {% endif %}
