--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -20,7 +20,6 @@
 <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
 <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
 <script type="text/javascript">
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('{{ absolute_url('/templates/Breezy/assets/js/service-worker.js') }}').then(function() {
@@ -36,5 +35,7 @@
     ga('send', 'pageview');
 
 </script>
+{% block javascripts %}
+{% endblock javascripts %}
 </body>
 </html>
