--- a/templates/Breezy/single-spectacles.html.twig
+++ b/templates/Breezy/single-spectacles.html.twig
@@ -3,8 +3,16 @@
     <div id="content">
         <article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}"  itemscope itemtype="http://schema.org/Event">
             <div class="post-featured-item">
-                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                     title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" />
+                {% if content.thumbnail is not null %}
+                    <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                         alt="{{ content.thumbnail.metas['alt_1'] }}"
+                         title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" itemprop="image" />
+                    <div class="blurred">
+                        <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                             alt="{{ content.thumbnail.metas['alt_1'] }}"
+                             title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive"/>
+                    </div>
+                {% endif %}
             </div>
             <div class="post-entry full">
                 <div class="post-header">
