--- a/web/templates/Breezy/header.html.twig
+++ b/web/templates/Breezy/header.html.twig
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="152x152" href="/templates/Breezy/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/templates/Breezy/assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/templates/Breezy/assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
+    <link rel="mask-icon" href="/templates/Breezy/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico?v2">
+    <meta name="msapplication-config" content="/templates/Breezy/assets/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     {% if content is defined %}
         {{ metas(content) }}
         <link rel="alternate" href="{{ url('front_single', {'alias': content.url, '_format': 'html'}) }}" hreflang="fr-fr" />
@@ -19,27 +27,14 @@
         <link rel="alternate" href="{{ url('home', {'_format': 'html'}) }}" hreflang="fr-fr" />
     {% endif %}
     <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
-
     {% stylesheets
         '@breezy'
         filter="uglifycss" filter="cssrewrite" output="css/breezy.css" %}
     <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-84835424-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-    <script>
-        var styleArray = [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}];
+        function loadCSS(e,n,o,t){"use strict";var d=window.document.createElement("link"),i=n||window.document.getElementsByTagName("script")[0],r=window.document.styleSheets;return d.rel="stylesheet",d.href=e,d.media="only x",t&&(d.onload=t),i.parentNode.insertBefore(d,i),d.onloadcssdefined=function(e){for(var n,o=0;o<r.length;o++)r[o].href&&r[o].href===d.href&&(n=!0);n?e():setTimeout(function(){d.onloadcssdefined(e)})},d.onloadcssdefined(function(){d.media=o||"all"}),d}
+        loadCSS('https://fonts.googleapis.com/css?family=Amatic+SC|Lato');
     </script>
 </head>
 <body>
@@ -56,8 +51,8 @@
         <div id="main-header-logo">
             <div id="main-wrapper-logo">
                 <div class="container">
-                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Travel Cloud</a></h1>
-                    <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" />
+                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Choup et Doune</a></h1>
+                    <a href="{{ path('home', {'_format': 'html'}) }}"><img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" alt="bus volkswagen" /></a>
                 </div>
             </div>
         </div>
