--- a/web/templates/Breezy/home.html.twig
+++ b/web/templates/Breezy/home.html.twig
@@ -38,6 +38,7 @@
             <div id="content">
                 <div class="post-list grid">
                     <div class="grid-layout">
+                        {% set contents = Query({'category_name': '-non-categorise', 'orderby': 'id', 'order': 'DESC'}) %}
                         {% for content in contents %}
                             <article class="post-item article-item">
                                 <div id="post" class="post item">
@@ -60,17 +61,11 @@
                                             </div>
                                             <p>{{ content.chapo }}</p>
                                             <div class="masonry-item-footer clearfix">
-                                                <div class="pull-right">{{ social_buttons(tiny_url) }}</div>
-                                            </div>
-                                            <div class="masonry-item-footer clearfix">
                                                 <div class="sub-meta-container">
                                                     <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
                                                 </div>
                                                 <div class="comment-like-container">
-                                                    <i class="fa fa-comment"></i> {{ content.comments|length }}
-                                                    <a href="javascript:addLikeContent('{{ content.id }}')">
-                                                        <i class="fa fa-heart"></i> {{ content.likes }}
-                                                    </a>
+                                                    {{ social_buttons(content.url) }}
                                                 </div>
                                             </div>
                                         </div>
