--- a/web/templates/Breezy/single-spectacles.html.twig
+++ b/web/templates/Breezy/single-spectacles.html.twig
@@ -1,15 +1,23 @@
 {% include "@cms/Breezy/header.html.twig" %}
 <div class="container">
     <div id="content">
-        <article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}">
+        <article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}"  itemscope itemtype="http://schema.org/Event">
             <div class="post-featured-item">
-                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                     title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" />
+                {% if content.thumbnail is not null %}
+                    <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                         alt="{{ content.thumbnail.metas['alt_1'] }}"
+                         title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" itemprop="image" />
+                    <div class="blurred">
+                        <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                             alt="{{ content.thumbnail.metas['alt_1'] }}"
+                             title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive"/>
+                    </div>
+                {% endif %}
             </div>
             <div class="post-entry full">
                 <div class="post-header">
                     <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
-                    <h1>{{ content.title }}</h1>
+                    <h1 itemprop="name">{{ content.title }}</h1>
                 </div>
                 <div class="post-entry-text">
                     {{ content.description|contact_form|raw }}
@@ -28,7 +36,7 @@
         <div class="widget widget_infos">
             <h4 class="widget-title">Infos</h4>
             <p>Date : {{ content.get('date-du-concert')|raw }}</p>
-            <p>Tarif : {{ content.get('tarif')|raw }}</p>
+            <p>Tarif : {{ content.get('tarif')|raw }}&euro;</p>
         </div>
 
         <div class="widget widget_map">
@@ -36,10 +44,12 @@
             {{ content.get('salle-de-spectacle')|raw }}
         </div>
 
+        {% if content.get('galerie-photo') != '' %}
         <div class="widget widget_galerie">
             <h4 class="widget-title">Galerie Photo</h4>
             {{ content.get('galerie-photo')|raw }}
         </div>
+        {% endif %}
 
     </aside>
 </div>
