--- a/web/templates/Breezy/home.html.twig
+++ b/web/templates/Breezy/home.html.twig
@@ -16,10 +16,10 @@
                                             <h2><a href="{{ path('front_single', {'alias': article.url, '_format': 'html'}) }}"
                                                    class="link-article">{{ article.title }}</a></h2>
                                             <span class="date-author">
-                                        <span class="author">{{ article.author }}</span>
-                                        <span class="seperator">-</span>
-                                        <span class="date">{{ article.created|date(date_format) }}</span>
-                                    </span>
+                                                <span class="author">{{ article.author.displayName }}</span>
+                                                <span class="seperator">-</span>
+                                                <span class="date">{{ article.created|date(date_format) }}</span>
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
@@ -40,14 +40,15 @@
                     <div class="grid-layout">
                         {% set contents = Query({'category_name': '-non-categorise', 'orderby': 'id', 'order': 'DESC'}) %}
                         {% for content in contents %}
+
                             <article class="post-item article-item">
                                 <div id="post" class="post item">
                                     <div class="post-featured-item">
                                         {% if content.thumbnail is not null %}
                                             <a href="{{ path('front_single', {'alias': content.url, '_format': 'html'}) }}">
-                                                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
+                                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
                                                      alt="{{ content.thumbnail.metas['alt_1'] }}"
-                                                     title="{{ content.thumbnail.metas['title_1'] }}">
+                                                     title="{{ content.thumbnail.metas['title_1'] }}" />
                                             </a>
                                         {% endif %}
                                     </div>
