--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -41,9 +41,11 @@
             <div class="col-md-3 pull-right">
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
+                        <h4 class="title pull-left">Infos <a data-toggle="collapse" href="#collapseInfos" class="pull-right"><i
                                         class="fa fa-angle-down"></i></a></h4>
-
+                        {% if notification %}
+                            <a href="javascript:initNotify()" class="btn btn-danger pull-right" title="cms.content.display_notification"><i class="fa fa-bell-o"></i></a>
+                        {% endif %}
                         <div class="clearfix"></div>
                     </div>
                     <div class="content collapse in" id="collapseInfos" aria-expanded="true">
