Comment controller et cache control

--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -26,6 +26,10 @@
         });
     }
 
+    $(document).ready(function() {
+        $('#main-wrapper-logo .container a').css('animation', "focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s 1 normal both");
+    })
+
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
