--- a/templates/Breezy/home.html.twig
+++ b/templates/Breezy/home.html.twig
@@ -18,7 +18,7 @@
                                             <span class="date-author">
                                                 <span class="author">{{ article.author }}</span>
                                                 <span class="seperator">-</span>
-                                                <span class="date">{{ article.created|gmdate(date_format) }}</span>
+                                                <span class="date">{{ article.created|localizeddate("medium", "none") }}</span>
                                             </span>
                                         </div>
                                     </div>
